--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "b7b1fa1f",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,37 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6404e19d",
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 102.0.5005\n",
-      "[WDM] - Get LATEST chromedriver version for 102.0.5005 google-chrome\n",
-      "[WDM] - Driver [C:\\Users\\zdiercks\\.wdm\\drivers\\chromedriver\\win32\\102.0.5005.61\\chromedriver.exe] found in cache\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "# Windows users\n",
+    "executable_path = {'executable_path': \"C:\\\\Users\\\\A Girl's Lenovo\\\\.wdm\\\\drivers\\\\chromedriver\\\\win32\\\\89.0.4389.23\\\\chromedriver.exe\"}\n",
     "browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "5f6e92b3",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -55,14 +35,14 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Visit the mars nasa news site\n",
-    "url = 'https://redplanetscience.com'\n",
+    "url = 'https://data-class-mars.s3.amazonaws.com/Mars/index.html'\n",
     "browser.visit(url)\n",
     "# Optional delay for loading the page\n",
     "browser.is_element_present_by_css('div.list_text', wait_time=1)"
@@ -70,11 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "fb1bec94",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# set up the HTML parser:\n",
+    "\n",
     "html = browser.html\n",
     "news_soup = soup(html, 'html.parser')\n",
     "slide_elem = news_soup.select_one('div.list_text')"
@@ -82,40 +63,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1ae9c429",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">Mars 2020 Unwrapped and Ready for More Testing</div>"
+       "<div class=\"content_title\">HiRISE Views NASA's InSight and Curiosity on Mars</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "slide_elem.find('div', class_='content_title')"
+    "# begin scraping:\n",
+    "\n",
+    "slide_elem.find('div', class_= 'content_title')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ee9e08c8",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Mars 2020 Unwrapped and Ready for More Testing'"
+       "\"HiRISE Views NASA's InSight and Curiosity on Mars\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,17 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f670863c",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"In time-lapse video, bunny-suited engineers remove the inner layer of protective foil on NASA's Mars 2020 rover after it was relocated for testing.\""
+       "'New images taken from space offer the clearest orbital glimpse yet of InSight as well as a view of Curiosity rolling along.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +129,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c85e4290",
    "metadata": {},
    "source": [
     "### Featured Images"
@@ -159,20 +136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a8195814",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Visit URL\n",
-    "url = 'https://spaceimages-mars.com'\n",
+    "url = 'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/index.html'\n",
     "browser.visit(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5734d29b",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,8 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "15786cc6",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,8 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "20d1f860",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -205,12 +178,13 @@
        "'image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# tell BeautifulSoup to look inside the <img /> tag for an image with a class of fancybox-image\n",
     "# Find the relative image url\n",
     "img_url_rel = img_soup.find('img', class_='fancybox-image').get('src')\n",
     "img_url_rel"
@@ -218,31 +192,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a975d654",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
+       "'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars3.jpg'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use the base URL to create an absolute URL\n",
-    "img_url = f'https://spaceimages-mars.com/{img_url_rel}'\n",
+    "img_url = f'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/{img_url_rel}'\n",
     "img_url"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1583dbb5",
    "metadata": {},
    "outputs": [
     {
@@ -333,16 +305,25 @@
     }
    ],
    "source": [
-    "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
+    "# create a new DataFrame from the HTML table\n",
+    "# The Pandas function read_html() specifically searches for and returns a list of tables found in the HTML\n",
+    "# specifying an index of 0, we're telling Pandas to pull only the first table it encounters, or the first item in the list\n",
+    "df = pd.read_html('https://data-class-mars-facts.s3.amazonaws.com/Mars_Facts/index.html')[0]\n",
+    "\n",
+    "# assign columns to the new DataFrame\n",
     "df.columns=['description', 'Mars', 'Earth']\n",
+    "\n",
+    "# By using the .set_index() function, we're turning the Description column into the DataFrame's index. \n",
+    "# inplace=True means that the updated index will remain in place, without having to reassign the DataFrame to a new variable\n",
     "df.set_index('description', inplace=True)\n",
+    "\n",
+    "\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "dd8bdaed",
    "metadata": {},
    "outputs": [
     {
@@ -357,33 +338,120 @@
     }
    ],
    "source": [
+    "# convert our DataFrame back into HTML-ready code using the .to_html() function\n",
     "df.to_html()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# D1: Scrape High-Resolution Mars’ Hemisphere Images and Titles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hemispheres"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "53c726b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "browser.quit()"
+    "# 1. Use browser to visit the URL \n",
+    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "\n",
+    "browser.visit(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9b1e6258",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 2. Create a list to hold the images and titles.\n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "\n",
+    "\n",
+    "for i in range(4):\n",
+    "        \n",
+    "    # Find and click the relevant hemisphere page link \n",
+    "    hemisphere_url = browser.find_by_tag(\"div.description a.itemLink.product-item\")[i]\n",
+    "    hemisphere_url.click()\n",
+    "    \n",
+    "    # Parse the resulting html with soup\n",
+    "    html = browser.html\n",
+    "    img_soup = soup(html, 'html.parser')\n",
+    "    \n",
+    "    # begin scraping\n",
+    "    # Look inside the <li /> tag for full image url\n",
+    "    list_item = img_soup.find('li')\n",
+    "    img_url_rel = list_item.find('a')['href']\n",
+    "    \n",
+    "    # look inside the <h2 /> tag for text with a class of title\n",
+    "    title_rel = img_soup.select_one('h2', class_='title').get_text()\n",
+    "    \n",
+    "    # Store dictionary values\n",
+    "    hemispheres = {\"title\": title_rel, \"img_url\": img_url_rel}\n",
+    "       \n",
+    "    # append dictionary to list\n",
+    "    hemisphere_image_urls.append(hemispheres)\n",
+    "    \n",
+    "    # go back to url\n",
+    "    browser.back()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. Print the list that holds the dictionary of each image url and title\n",
+    "hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# End the automated browsing session\n",
+    "browser.quit()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
@@ -395,9 +463,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
